Fixed material-icons not showing

--- a/src/scss/skins/buttons/_material.scss
+++ b/src/scss/skins/buttons/_material.scss
@@ -6,30 +6,37 @@
        local('MaterialIcons-Regular'),
        url(https://fonts.gstatic.com/s/materialicons/v128/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
+@mixin materialicons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+.material-icons {
+    font-size: 24px;
+    @include materialicons;
+}
 .ndjp {
   .panel {
     a {
       line-height: 0;
       &::before {
-          font-family: 'Material Icons';
-          font-weight: normal;
-          font-style: normal;
           font-size: 18px;
-          line-height: 1;
-          letter-spacing: normal;
-          text-transform: none;
-          display: inline-block;
-          white-space: nowrap;
-          word-wrap: normal;
-          direction: ltr;
-          /* Support for all WebKit browsers. */
-          -webkit-font-smoothing: antialiased;
-          /* Support for Safari and Chrome. */
-          text-rendering: optimizeLegibility;
-          /* Support for Firefox. */
-          -moz-osx-font-smoothing: grayscale;
-          /* Support for IE. */
-          font-feature-settings: 'liga';
+          @include materialicons;
       }
       &.rec::before {
         content: "fiber_manual_record";
